# tasty

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/plans/: multi-window-analysis.md  multi-window.md
.claude/temp/: report-negative-bias.md
crates/tasty-hooks/: Cargo.toml
crates/tasty-terminal/: Cargo.toml
docs/: agent-guide.md  features.md  index.md
docs/agent-guide/: api-reference.md  index.md  linux.md
docs/ai-verification/: egui-layout.md  ime-testing.md  ipc-usage.md  python-execution.md  screenshot-methods.md  state-none-gpu-separation.md  tcp-communication.md  visual-verification.md  windows-process-cleanup.md
docs/architecture/: data-flows.md  index.md  library-separation.md  modules.md  refactoring.md
docs/design/: focus-policy.md  key-mapping.md  layout-concept.md  multi-window-architecture.md  popup-system.md  split-command.md  theme-system.md  ubiquitous-language.md
docs/dev-guide/: crash-diagnostics.md  index.md  linux.md
docs/libs/: clap.md  clipboard-and-notification.md  cosmic-text.md  egui.md  error-handling.md  logging.md  portable-pty.md  (+6 more)
lang/: en.toml  ja.toml  ko.toml
scripts/: full_test.py
src/: cli.rs  click_cursor.rs  crash_report.rs  debug_info.rs  double_tap.rs  engine.rs  engine_state.rs  event_handler.rs  explorer_ui.rs  font.rs  global_hooks.rs  gpu.rs  hooks.rs  i18n.rs  main.rs  markdown_ui.rs  modal_window.rs  model.rs  notification.rs  renderer.rs  selection.rs  settings.rs  settings_ui.rs  shortcuts.rs  state.rs  surface_meta.rs  tasty_window.rs  terminal.rs  theme.rs  ui.rs
tests/: e2e_tests.rs  gui_tests.rs
(+135 files in other folders)
