[package]
name = "tasty"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform GPU-accelerated terminal emulator for AI coding agents"
repository = "https://github.com/zilhak/tasty"

[dependencies]
# Window & Input
winit = "0.30"

# GPU Rendering
wgpu = "24"

# UI Widgets
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

# Terminal Emulation
termwiz = "0.22"
portable-pty = "0.8"

# Async
pollster = "0.4"
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Font & Text
cosmic-text = "0.18"
bytemuck = { version = "1", features = ["derive"] }

# Notifications
notify-rust = "4"

# Utilities
directories = "6"

[profile.release]
lto = true
strip = true
opt-level = 3
